--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -1,7 +1,7 @@
 // BACKGROUND IMAGE
 // -------------------------
 .image-wrapper {
-	background: $charcoal-gray !important;
+	background: $charcoal-gray;
 	margin-bottom: 0;
 	border-radius: 0;
 	min-height: 170px;
