--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -15,11 +15,13 @@
 			margin: 0 .75em 0 0;
 			font-weight: 700;
 			line-height: 1.4em;
+			display: block;
 		}
 		i {
-				color: $cornell-primary;
-				margin-right: .5em;
-			}
+			color: $cornell-primary;
+			margin-right: .5em;
+			display: none; // hide on mobile for spacing
+		}
 	}
 	.all-hours-link {
 		padding-left: 1em;
@@ -194,6 +196,12 @@
 			border-left: 1px solid $pale-tan;
 			float: left;
 			margin: 5px;
+		}
+		span {
+			display: inline;
+		}
+		i {
+			display: block;
 		}
 	}
 	.page-search {
