clean up page not found

--- a/css/johnson/_pfdintextpro.scss
+++ b/css/johnson/_pfdintextpro.scss
@@ -15,7 +15,7 @@
     font-family: 'pf_dintext_proregular';
     src: url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.eot');
     src: url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.woff2') format('woff2'),
+         // url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.woff2') format('woff2'),
          url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.woff') format('woff'),
          url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.ttf') format('truetype'),
          url('../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.svg#pf_dintext_proregular') format('svg');
