--- a/css/style.css
+++ b/css/style.css
@@ -7816,6 +7816,9 @@ body.admin-menu {
   font-size: 75%;
   margin-left: .5em; }
 
+.status-list .field-item {
+  margin: 0 0 1em 0; }
+
 .courselist-form .form-select {
   height: 34px;
   padding: 6px 12px;
