--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -188,7 +188,9 @@
 
 // Status list
 .status-list {
+	margin-bottom: 1em;
 	.field-item {
-		margin: 0 0 1em 0;
+		margin: 0 0 .5em 0;
+		font-size: 18px;
 	}
 }
