responsive for well on db node page

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -194,3 +194,27 @@
 		font-size: 18px;
 	}
 }
+
+// Connect well
+.connect-box {
+	float: none !important;
+	padding: 0;
+}
+
+
+// MEDIA QUERIES
+// -------------------------
+
+// Small devices (tablets, 768px and up)
+@media (min-width: $screen-sm) {
+	.connect-box {
+		float: right !important;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+}
+
+// Medium devices (desktops, 992px and up)
+// @media (min-width: $screen-md) {
+
+// }
