--- a/css/style.css
+++ b/css/style.css
@@ -6874,7 +6874,7 @@ button.close {
 
 .cu-logo {
   display: block;
-  background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
+  background: url("../img/layout/Johnson_Cornell.simple.newseal.svg") no-repeat 0 0;
   width: 228px;
   height: 73px; }
   .cu-logo a {
