--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -23,7 +23,7 @@
 }
 .cu-logo {
 	display: block;
-	background: url("../img/layout/johnson-cornell.gif") no-repeat 0 0;
+	background: url("../img/layout/Johnson_Cornell.simple.newseal.svg") no-repeat 0 0;
 	width: 228px;
 	height: 73px;
 	a {
