--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -26,6 +26,7 @@
 	background: url("../img/layout/Johnson_Cornell.simple.newseal.svg") no-repeat 0 0;
 	width: 228px;
 	height: 73px;
+	background-size: 228px auto;
 	a {
 		display: block;
 		border: none;
