--- a/css/style.css
+++ b/css/style.css
@@ -6876,7 +6876,8 @@ button.close {
   display: block;
   background: url("../img/layout/Johnson_Cornell.simple.newseal.svg") no-repeat 0 0;
   width: 228px;
-  height: 73px; }
+  height: 73px;
+  background-size: 228px auto; }
   .cu-logo a {
     display: block;
     border: none;
