format connect to resource link on db search results

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -120,6 +120,11 @@
 		background: black;
 	}
 }
+.connect-link {
+	i {
+		margin-left: .4em;
+	}
+}
 
 // DATABASE AND FAQ NODE TEMPLATE
 // -----------------------------------
