--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -35,6 +35,13 @@
 		margin-top: 0;
 	}
 }
+.view-database-topics {
+	.database-item {
+		h2 {
+			font-size: 18px;
+		}
+	}
+}
 .faq-item {
 	padding: 1em 0 .5em 0;
 	h3 {
