--- a/css/style.css
+++ b/css/style.css
@@ -7705,6 +7705,9 @@ body.admin-menu {
     font-size: 24px;
     margin-top: 0; }
 
+.view-database-topics .database-item h2 {
+  font-size: 18px; }
+
 .faq-item {
   padding: 1em 0 .5em 0; }
   .faq-item h3 {
