format databases by topic

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -37,8 +37,10 @@
 }
 .view-database-topics {
 	.database-item {
+		padding: .5em 0;
 		h2 {
-			font-size: 18px;
+			font-size: 20px;
+			margin-bottom: 0;
 		}
 	}
 }
