--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -40,7 +40,11 @@
 		padding: .5em 0;
 		h2 {
 			font-size: 20px;
-			margin-bottom: 0;
+			margin-bottom: .15em;
+		}
+		.connect-link {
+			font-size: 14px;
+			margin-left: 1em;
 		}
 	}
 }
