format status icons

--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -207,9 +207,9 @@
 // Status list
 .status-list {
 	margin-bottom: 1em;
-	.field-item {
-		margin: 0 0 .5em 0;
-		font-size: 18px;
+	i {
+		width: 1.5em;
+		text-align: center;
 	}
 }
 
