--- a/css/johnson/_databases.scss
+++ b/css/johnson/_databases.scss
@@ -65,7 +65,7 @@
 	margin-bottom: .5em;
 }
 .db-topics {
-	margin-bottom: 1em;
+	margin: 1em 0;
 	.label-topic {
 		color: $dark-gray;
 		font-size: 14px;
