clean up bootstrap and font awesome in theme

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap';
 
 // Font Awesome
-@import 'font-awesome/font-awesome';
+// @import 'font-awesome/font-awesome';
 
 @import 'johnson/pfdintextpro';
 @import 'johnson/variables';
