--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@
   .header-search form {
     float: right;
     width: 100%; }
+  .header-search .btn-primary {
+    background-color: #b31b1b;
+    border-color: #b31b1b; }
+  .header-search .btn-primary:hover {
+    background-color: #990f26;
+    border-color: #990f26; }
 
 .cornell-brand {
   background: white;
