--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -31,6 +31,11 @@
 			margin-left: .5em;
 		}
 	}
+	.view-footer {
+		clear: both;
+		float: right;
+		padding: 0 10px 5px 0;
+	}
 }
 
 // FEATURED CONTENT
