--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,10 @@ footer {
     color: #999;
     font-size: 75%;
     margin-left: .5em; }
+  .hours .view-footer {
+    clear: both;
+    float: right;
+    padding: 0 10px 5px 0; }
 
 .featured-content {
   padding: 40px 0;
