--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -33,7 +33,6 @@
 	}
 	.view-footer {
 		clear: both;
-		float: right;
 		padding: 0 10px 5px 0;
 	}
 }
@@ -197,6 +196,9 @@
 		.all-hours-link {
 			float: left;
 			margin: 5px;
+		}
+		.view-footer {
+			text-align: right;
 		}
 	}
 	.page-search {
