JOHNSON-157: formatting for hours box

--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -12,12 +12,13 @@
 		span {
 			font-size: 14px;
 			text-transform: uppercase;
-			margin: 0 .75em 0 0;
+			margin: 0 .5em 0 0;
 			font-weight: 700;
 			line-height: 1.4em;
 		}
 		i {
 			margin-right: .2em;
+			font-size: 150%;
 		}
 	}
 	.all-hours-link {
