JOHNSON-157: hours box on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,7 @@ footer {
     border-left: 1px solid #efede9; }
   .hours .view-footer {
     text-align: right; }
-  .hours .todays-hours {
+  .hours .today-hours {
     float: left; } }
 .resource-tabs .nav-tabs {
   border-bottom: 0;
